--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,11 @@ dependencies {
     
     //websocket
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '2.4.5'
+    //kafka
+    implementation group: 'org.springframework.kafka', name: 'spring-kafka', version: '2.8.2'
+    implementation group: 'org.apache.kafka', name: 'kafka_2.13', version: '3.1.0'
+    // gateway
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-gateway', version: '3.0.6'
 }
 
 test {
