--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     implementation group: 'org.springframework.kafka', name: 'spring-kafka', version: '2.8.2'
     implementation group: 'org.apache.kafka', name: 'kafka_2.10', version: '0.9.0.0'
     // gateway
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-gateway', version: '3.0.6'
+//    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-gateway', version: '3.0.6'
 }
 
 test {
