--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    implementation 'org.springframework.boot:spring-boot-starter-security:2.6.3'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+
     //mysql
     implementation group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
     implementation group: 'com.alibaba', name: 'druid', version: '1.2.3'
