Spring Boot 添加线程池测试代码

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-security:2.6.3'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'org.springframework.boot:spring-boot-starter-freemarker:2.6.7'
+
 
     //mysql
     implementation group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
