--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-logging', version: '2.4.2'
     //redisspring-boot-starter-web
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.5.1'
+    implementation 'org.springframework.boot:spring-boot-starter-parent:2.6.6'
 
     //yaml文件解析
     implementation group: 'org.yaml', name: 'snakeyaml', version: '1.26'
