--- a/src/main/resources/application-db.yml
+++ b/src/main/resources/application-db.yml
@@ -3,7 +3,7 @@ dataSource:
     # 写库
     write:
         driverClassName: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://127.0.0.1:3306/demo?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&failOverReadOnly=false&useSSL=false&serverTimezone=Asia/Shanghai
+        url: jdbc:mysql://127.0.0.1:3306/mayikt_rbac?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&failOverReadOnly=false&useSSL=false&serverTimezone=Asia/Shanghai
         username: root
         password: 123456
     # 读库
